--- a/layout/index.html
+++ b/layout/index.html
@@ -10,7 +10,7 @@
 	<div class="AREA_PWRAPPER">
 		<div class="AREA_WRAPPER">
 			<div class="AREA_NAV">
-				<div>
+				<div id="nav_main">
 					<a href="/">
 						<img alt="Home" src="content/images/nav/home.png" />
 						Home
@@ -28,8 +28,12 @@
 						Contact
 					</a>
 				</div>
-				<div>
-					<div>0xc0de</div>
+				<div id="nav_projects">
+					<div>
+						<a href="/projects">
+							Projects
+						</a>
+					</div>
 					<a href="/software/binary_clock">
 						<img alt="Binary Clock" src="content/images/nav/binary_clock.png" />
 						Binary Clock
@@ -38,13 +42,9 @@
 						<img alt="Portable Postgres" src="content/images/nav/portable_postgres.png" />
 						Portable Postgres
 					</a>
-					<a href="/software/uber_cms">
-						<img alt="Binary Clock" src="content/images/nav/uber_cms.png" />
-						Uber CMS
-					</a>
-					<a href="/software/uber_media">
-						<img alt="Uber Media" src="content/images/nav/uber_media.png" />
-						Uber Media
+					<a href="/software/pals">
+						<img alt="PALS" src="content/images/nav/portable_postgres.png" />
+						PALS
 					</a>
 				</div>
 				<div>
@@ -58,12 +58,12 @@
 						Whirlpool
 					</a>
 				</div>
-				<div>
-					<div>Articles</div>
-					<a href="/articles">
-						<img alt="Articles" src="content/images/nav/articles.png" />
-						View All
-					</a>
+				<div id="nav_articles">
+					<div>
+						<a href="/articles">
+							Articles
+						</a>
+					</div>
 					<a href="/hacking_nandos_pong_game">
 						<img alt="Alarm Clock" src="content/images/nav/nandos.png" />
 						Hacking The Nandos...
@@ -73,11 +73,11 @@
 						University Work
 					</a>
 				</div>
-				<div>
+				<div id="nav_misc">
 					<div>Misc</div>
 					<a href="/files">
 						<img alt="Images" src="content/images/nav/files.png" />
-						Files
+						Public Files
 					</a>
 					<a href="https://github.com/limpygnome">
 						<img alt="Github" src="content/images/nav/github.png" />
@@ -87,12 +87,10 @@
 						<img alt="Guitar" src="content/images/nav/music.png" />
 						Music
 					</a>
-					<!--
 					<a href="/misc/tools">
 						<img alt="Guitar" src="content/images/nav/tools.png" />
 						Tools
 					</a>
-					-->
 				</div>
 			</div>
 			<div class="AREA_CONTENT">
