--- a/layout/index.html
+++ b/layout/index.html
@@ -7,9 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="content/css/layout.css" />
 </head>
 <body>
-	<div class="AREA_PWRAPPER">
-		<div class="AREA_WRAPPER">
-			<div class="AREA_NAV">
+	<div class="pwrapper">
+		<div class="wrapper">
+			<div class="banner">
+				<h1>limpygnome</h1>
+			</div>
+		</div>
+		<div class="wrapper">
+			<div class="nav">
 				<div id="nav_main">
 					<a href="/">
 						<img alt="Home" src="content/images/nav/home.png" />
@@ -93,11 +98,8 @@
 					</a>
 				</div>
 			</div>
-			<div class="AREA_CONTENT">
-				<div class="AREA_BANNER">
-					<h1>limpygnome</h1>
-				</div>
-				<div class="AREA_INNER_CONTENT">
+			<div class="content">
+				<div class="inner_content">
 					<h2>Home</h2>
 					<p>
 						content here...
