--- a/layout/index.html
+++ b/layout/index.html
@@ -1,9 +1,9 @@
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Limpygnome - Home</title>
 	<meta http-equiv="/content-type" content="text/html;charset=utf-8" />
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Droid+Sans">
 	<link rel="stylesheet" type="text/css" href="content/css/layout.css" />
 </head>
 <body>
@@ -52,7 +52,7 @@
 						PALS
 					</a>
 				</div>
-				<div>
+				<div id="nav_games">
 					<div>Games</div>
 					<a href="/games/insomniac">
 						<img alt="Insomniac" src="content/images/nav/insomniac.png" />
@@ -100,24 +100,125 @@
 			</div>
 			<div class="content">
 				<div class="inner_content">
-					<h2>Home</h2>
+					<h2>header 2</h2>
+					<h3>header 3</h3>
 					<p>
-						content here...
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue lorem vitae varius convallis. Duis mollis et odio placerat tempor. Fusce dui purus, dictum vel tellus at, efficitur accumsan dolor. Phasellus laoreet odio id dui varius commodo. Etiam vehicula ullamcorper ex, vitae semper dolor euismod quis. Morbi hendrerit elit a enim elementum ultrices. Cras condimentum augue a tellus tincidunt, vitae faucibus odio bibendum. Quisque dapibus suscipit lorem eget volutpat. Sed finibus urna ac odio commodo pellentesque. Vivamus hendrerit fermentum consequat. Ut aliquet accumsan hendrerit. Etiam eu elit justo. Cras dui est, gravida fermentum risus non, porttitor tempor enim. Donec sodales euismod mauris sit amet viverra. Maecenas sem nibh, dignissim a semper dapibus, ultricies in ex.
+					</p>
+					<h3>header 3</h3>
+					<p>
+						Donec in sapien diam. Sed ultrices magna id interdum posuere. Donec accumsan lacinia nibh, quis dapibus dolor cursus sit amet. Suspendisse sed pharetra odio. Duis porttitor tortor ut eleifend elementum. Etiam lobortis porta diam a volutpat. Vivamus ultrices, quam vel commodo tempus, odio nunc tincidunt orci, ac facilisis est lorem ut sapien. Donec bibendum sed tellus at luctus. Sed tristique interdum ante et molestie. Donec molestie enim bibendum, interdum dolor ut, ultricies velit. Cras scelerisque arcu eget est convallis auctor. Morbi consectetur tempor turpis.
+					</p>
+					<h3>header 3</h3>
+					<h4>header 4</h4>
+					<h5>header 5</h5>
+					<p>
+						Aenean <a href="gfg">laoreet nulla</a> eu fringilla gravida. Aenean nec egestas tellus. In eleifend massa sed lacus congue, ut efficitur ex posuere. Cras vitae egestas metus. Phasellus auctor dictum fermentum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Mauris venenatis neque quis orci interdum, eget eleifend mauris dictum. Phasellus fermentum congue sem, sed semper nibh placerat lacinia.
 					</p>
 					<p>
 						<a href="http://google.com">
 							test link
 						</a>
-						<a href="http://google.com">
-							test link
-						</a>
-						<a href="http://google.com">
-							test link
-						</a>
 					</p>
+					<h3>header 3</h3>
+					<table>
+						<tr>
+							<th>r1c1</th>
+							<th>r1c2</th>
+							<th>r1c3</th>
+						</tr>
+						<tr>
+							<td>r2c1</td>
+							<td>r2c2</td>
+							<td>r2c3</td>
+						</tr>
+					</table>
+					
+					<h3>header 3</h3>
+					<div class="table">
+						<div class="row">
+							<div class="p">
+								<div class="cell2">
+									r1 c1
+								</div>
+								<div class="cell2">
+									r1 c2
+								</div>
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="row">
+							<div class="p">
+								<div class="cell2">
+									r2 c1
+								</div>
+								<div class="cell2">
+									<input type="text" value="abc" />
+								</div>
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="row">
+							<div class="p">
+								<div class="cell2">
+									r3 c1
+								</div>
+								<div class="cell2">
+									<input type="text" placeholder="abc" />
+								</div>
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="row">
+							<div class="p">
+								<div class="cell2">
+									r4 c1
+								</div>
+								<div class="cell2">
+									<div class="checkbox">
+										<input type="checkbox" id="abc" /> <label for="abc">test</label>
+									</div>
+								</div>
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="row">
+							<div class="p">
+								<div class="cell1 tac">
+									&nbsp;
+								</div>
+							</div>
+							<div class="clear"></div>
+						</div>
+						<div class="row">
+							<div class="p">
+								<div class="cell1 tac">
+									<input type="submit" />
+									<input type="reset" />
+									<a class="button" href="/dsa">
+										hyperlink
+									</a>
+								</div>
+							</div>
+							<div class="clear"></div>
+						</div>
+					</div>
+					
+					<p class="info">
+						info test
+					</p>
+					
+					<p class="error">
+						error test
+					</p>
+					
+					<p class="success">
+						success test
+					</p>
+					
 					<div class="clear"></div>
 				</div>
-				<div class="AREA_ICONS">
+				<div class="icons">
 					<a title="Github" class="icon gh" href="https://www.github.com/limpygnome">
 						Github
 					</a>
