Feature: added test website, ready for actual creation.

--- a/layout/index.html
+++ b/layout/index.html
@@ -92,7 +92,7 @@
 						<img alt="Guitar" src="content/images/nav/music.png" />
 						Music
 					</a>
-					<a href="/misc/tools">
+					<a href="/tools">
 						<img alt="Guitar" src="content/images/nav/tools.png" />
 						Tools
 					</a>
